--- a/lastboard_backend/pom.xml
+++ b/lastboard_backend/pom.xml
@@ -26,6 +26,12 @@
 			<artifactId>mybatis-spring-boot-starter</artifactId>
 			<version>2.2.2</version>
 		</dependency>
+		
+		<!-- Datasource를 사용하기 위해 commons-dbcp2를 추가한다. -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-dbcp2</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
