--- a/lastboard_backend/src/main/resources/application.properties
+++ b/lastboard_backend/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 
+server.servlet.context-path=/lastboard
+server.port=8080
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/ssafyweb?serverTimezone=UTC&useUniCode=yes&characterEncoding=UTF-8
+spring.datasource.username=ssafy
+spring.datasource.password=ssafy
+spring.datasource.type=org.apache.commons.dbcp2.BasicDataSource
+
+#MyBatis Setting
+mybatis.type-aliases-package=com.ssafy.lastboard/**/*.model
+mybatis.mapper-locations=mapper/**/*.xml
